[package]
name = "cti"
version = "0.0.3"
edition = "2024"
description = "CTI (Custom Tiled Image): tiled raster, lossless Zstd/LZ4, RCT, TIFF DPI/ICC, NDK preset"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["tiff", "png", "jpeg"] }
rayon = "1.10"
zstd = { version = "0.13", features = ["zstdmt"] }
lz4_flex = "0.11"
tiff = "0.11"
crc32fast = "1.5.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
